[tool.poetry]
name = "oce-dataset"
version = "0.1.0"
description = ""
authors = ["C. H. Bryan Liu"]
license = "CC BY 4.0"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.2.4"
numpy = "1.18.5"
scipy = "1.5.2"
matplotlib = "3.2.1"
seaborn = "0.11.1"
jupyter = "^1.0.0"
pyarrow = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
