[tool.poetry]
name = "oce-dataset"
version = "0.1.0"
description = ""
authors = ["C. H. Bryan Liu"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.0"
numpy = "^1.21.0"
scipy = "^1.6.0"
matplotlib = "^3.4.0"
seaborn = "^0.11.1"
jupyter = "^1.0.0"
pyarrow = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
