[tool.poetry]
name = "oce-dataset"
version = "0.1.0"
description = ""
authors = ["C. H. Bryan Liu"]
license = "GNU General Public License v3.0"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.4"
scipy = "^1.15.2"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
pyarrow = "^19.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
